--- a/References.bib
+++ b/References.bib
@@ -3261,12 +3261,12 @@ In 1996, a US federal agency began developing a new building energy simulation t
   url      = {http://www.sciencedirect.com/science/article/pii/S0378778817337544},
 }
 
-@Article{GoogleNgrams,
+@misc{GoogleNgrams,
   author       = {Google},
   title        = {{Google Books Ngrams Viewer}},
   year         = {2018},
-  howpublished = {Electronic},
-  url          = {http://books.google.com/ngrams},
+  publisher    = {Google},
+  howpublished = {\url{http://books.google.com/ngrams}},
 }
 
 @PhdThesis{Cullin2014,
@@ -3277,12 +3277,12 @@ In 1996, a US federal agency began developing a new building energy simulation t
   address = {Stillwater, OK},
 }
 
-@Article{DOEWeatherData,
+@misc{DOEWeatherData,
   author       = {DOE},
   title        = {{Weather Data}},
   year         = {2018},
-  howpublished = {Electronic},
-  url          = {https://energyplus.net/weather},
+  publisher    = {U.S. Department of Energy},
+  howpublished = {\url{https://energyplus.net/weather}},
 }
 
 @Article{NSGA2,
@@ -3303,6 +3303,16 @@ In 1996, a US federal agency began developing a new building energy simulation t
   author    = {Ted Honderich},
   address   = {Oxford, UK},
   edition   = {2\textsuperscript{nd}},
+}
+
+@Misc{PyPareto,
+  author       = {Matthew J. Woodruff and Jon Herman},
+  title        = {pareto},
+  howpublished = {\url{https://github.com/matthewjwoodruff/pareto.py}},
+  year         = {2018},
+  commit       = {b3df7bb57c50a7bebb8eec40d5a1a415560216cc},
+  journal      = {GitHub repository},
+  publisher    = {GitHub},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
