--- a/References.bib
+++ b/References.bib
@@ -3315,4 +3315,19 @@ In 1996, a US federal agency began developing a new building energy simulation t
   publisher    = {GitHub},
 }
 
+@Article{Hanby2002,
+  author    = {V. I. Hanby and J. A. Wright and D. W. Fletcher and D. N. T. Jones},
+  title     = {Modeling the Dynamic Response of Conduits},
+  journal   = {HVAC\&R Research},
+  year      = {2002},
+  volume    = {8},
+  number    = {1},
+  pages     = {1--12},
+  abstract  = {A method for the dynamic modeling of a fluid conduit is developed, based on its discretization into a sequence of well-mixed flow nodes. This enables the time delay produced by the fluid flow to be simply modeled in any time domain simulation. An optimal level of discretization, based on the residence time distribution produced by fully developed turbulent flow, is presented. The model is capable of calculating the response to changes in flow rate, fluid inlet temperature, and species concentration. The thermal response is based on a second-order model for each node, taking account of the thermal capacitance of the fluid and of the conduit inner wall. It is demonstrated that the model predicts a time delay, then a rapid initial response due to flow effects, followed by slower dynamics controlled by the thermal inertia of the walls. An intermodel comparison of output for a prototype duct is made with three published models, and an empirical validation is reported. },
+  doi       = {10.1080/10789669.2002.10391287},
+  eprint    = {https://www.tandfonline.com/doi/pdf/10.1080/10789669.2002.10391287},
+  publisher = {Taylor \& Francis},
+  url       = {https://www.tandfonline.com/doi/abs/10.1080/10789669.2002.10391287},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
