Alberdi-Pagola et al. 2018

--- a/References.bib
+++ b/References.bib
@@ -3330,4 +3330,14 @@ In 1996, a US federal agency began developing a new building energy simulation t
   url       = {https://www.tandfonline.com/doi/abs/10.1080/10789669.2002.10391287},
 }
 
+@TechReport{AlberdiPagolaRasmusJensenPoulsenErbs2018,
+  author      = {Maria Alberdi-Pagola and Rasmus Lund Jensen and S{\o}ren Poulsen and S{\o}ren Erbs},
+  title       = {Method to obtain g-functions for multiple precast quadratic pile heat exchangers},
+  institution = {Aalborg Unversity},
+  year        = {2018},
+  type        = {techreport},
+  number      = {243},
+  url         = {http://vbn.aau.dk/files/274763046/Method_to_obtain_g_functions_for_multiple_precast_quadratic_pile_heat_exchangers.pdf},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
