--- a/References.bib
+++ b/References.bib
@@ -2547,7 +2547,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 
 @Article{Cimmino2018,
   author    = {Massimo Cimmino},
-  title     = {Fast Calculation of the G-functions of Geothermal Borehole Fields Using Similarities in the Evaluation of the Finite Line Source Solution},
+  title     = {Fast Calculation of the {g-functions} of Geothermal Borehole Fields Using Similarities in the Evaluation of the Finite Line Source Solution},
   journal   = {Journal of Building Performance Simulation},
   year      = {2018},
   volume    = {Online},
@@ -3180,7 +3180,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
 @InProceedings{GehlinSpilterLarssonAnnsberg2018,
   author    = {Singhild Gehlin and Jeffrey D. Spitler and Anders Larsson and {\AA}ke Annsberg},
   title     = {Measured Performance of the {University of Stockholm Studenthuset} Ground Source Heat Pump System},
-  booktitle = {14\textsuperscript{th} Inernational Conference on Energy Storage-EnerSTOCK2018},
+  booktitle = {14\textsuperscript{th} International Conference on Energy Storage-EnerSTOCK2018},
   year      = {2018},
   pages     = {1--14},
   address   = {Adana, Turkey},
@@ -3196,7 +3196,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   volume    = {21},
   number    = {2},
   pages     = {137--149},
-  abstract  = { This work presents a validation of two common methods for designing vertical ground heat exchangers. Both a simulation-based design tool and the ASHRAE handbook design equation are used to find design lengths for four different real systems, using actual experimental data, including building loads as well as physical parameters as inputs. The measured minimum and maximum ground heat exchanger exiting fluid temperatures were used as the design constraint. The simulation-based design tool predicted the borehole length to within 6\% in all cases, while the ASHRAE handbook design equation yielded systems with errors from –21\% to 167\%. Most of this error can be explained by the way loads are represented in the ASHRAE handbook equation, with differences in the borehole thermal resistance also playing a smaller part. The ASHRAE handbook equation relies on a very simple load representation; although this allows it to be used as a simple hand calculation, it also precludes it achieving acceptable accuracy. It does not appear to be possible to revise the ASHRAE handbook equation so as to both significantly improve its accuracy and allow its use in a simple hand calculation. },
+  abstract  = {This work presents a validation of two common methods for designing vertical ground heat exchangers. Both a simulation-based design tool and the ASHRAE handbook design equation are used to find design lengths for four different real systems, using actual experimental data, including building loads as well as physical parameters as inputs. The measured minimum and maximum ground heat exchanger exiting fluid temperatures were used as the design constraint. The simulation-based design tool predicted the borehole length to within 6\% in all cases, while the ASHRAE handbook design equation yielded systems with errors from –21\% to 167\%. Most of this error can be explained by the way loads are represented in the ASHRAE handbook equation, with differences in the borehole thermal resistance also playing a smaller part. The ASHRAE handbook equation relies on a very simple load representation; although this allows it to be used as a simple hand calculation, it also precludes it achieving acceptable accuracy. It does not appear to be possible to revise the ASHRAE handbook equation so as to both significantly improve its accuracy and allow its use in a simple hand calculation. },
   doi       = {10.1080/10789669.2014.974478},
   eprint    = {https://doi.org/10.1080/10789669.2014.974478},
   publisher = {Taylor \& Francis},
@@ -3226,7 +3226,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   journal  = {Renewable Energy},
   year     = {2018},
   issn     = {0960-1481},
-  abstract = {Ground Source Heat Pump systems can play an important role in reducing carbon emissions associated with building heating and cooling. The efficiencies and carbon emission savings achieved, partly depend on the optimization of the design, the control of the system and its reliability during extended operation. This paper reports the detailed investigation of the performance of a large system that includes fifty-six vertical borehole heat exchangers and four large heat pumps that provide both heating and cooling. High frequency data have been collected during the initial three years of operation that allow seasonal performance factors to be derived and detailed analysis of system operation. Annual performance has been found to be satisfactory overall but is highly variable depending on operating conditions and control system actions. A series of analyses have been carried out to investigate the roles of circulating pump energy, control system operation and dynamic behaviour. A series of recommendations concerned with better design for part-load operation, reduction in pump energy demands and more robust control systems, are made with a view to improved system design and operation. Data from the study are being made available for further work on performance analysis and model validation studies.},
+  abstract = {Ground Source Heat Pump systems can play an important role in reducing carbon emissions associated with building heating and cooling. The efficiencies and carbon emission savings achieved, partly depend on the optimization of the design, the control of the system and its reliability during extended operation. This paper reports the detailed investigation of the performance of a large system that includes fifty-six vertical borehole heat exchangers and four large heat pumps that provide both heating and cooling. High frequency data have been collected during the initial three years of operation that allow seasonal performance factors to be derived and detailed analysis of system operation. Annual performance has been found to be satisfactory overall but is highly variable depending on operating conditions and control system actions. A series of analyses have been carried out to investigate the roles of circulating pump energy, control system operation and dynamic behavior. A series of recommendations concerned with better design for part-load operation, reduction in pump energy demands and more robust control systems, are made with a view to improved system design and operation. Data from the study are being made available for further work on performance analysis and model validation studies.},
   doi      = {https://doi.org/10.1016/j.renene.2018.01.099},
   keywords = {Geothermal, Ground source heat pump, System performance factor, Borehole heat exchanger, Performance analysis},
   type     = {Journal Article},
@@ -3333,11 +3333,25 @@ In 1996, a US federal agency began developing a new building energy simulation t
 @TechReport{AlberdiPagolaRasmusJensenPoulsenErbs2018,
   author      = {Maria Alberdi-Pagola and Rasmus Lund Jensen and S{\o}ren Poulsen and S{\o}ren Erbs},
   title       = {Method to obtain g-functions for multiple precast quadratic pile heat exchangers},
-  institution = {Aalborg Unversity},
+  institution = {Aalborg University},
   year        = {2018},
   type        = {techreport},
   number      = {243},
   url         = {http://vbn.aau.dk/files/274763046/Method_to_obtain_g_functions_for_multiple_precast_quadratic_pile_heat_exchangers.pdf},
+}
+
+@Article{REES2015518,
+  author   = {Simon J. Rees},
+  title    = {An extended two-dimensional borehole heat exchanger model for simulation of short and medium timescale thermal response},
+  journal  = {Renewable Energy},
+  year     = {2015},
+  volume   = {83},
+  pages    = {518--526},
+  issn     = {0960-1481},
+  abstract = {Common approaches to the simulation of Borehole Heat Exchangers (BHEs) assume heat transfer in circulating fluid and grout to be in a quasi-steady state and ignore fluctuations in fluid temperature due to transport of the fluid around the U-tube loop. Such effects have been shown to have an impact on peak temperatures and hence operation of heat pumps systems when short time scales are considered. A model has been developed that combines a two-dimensional numerical model and models of the pipe loop components. A novel heat exchanger analogy is employed to calculate the heat exchanger outlet temperatures such that iterative procedures can be avoided and numerical stability is unconditional. These approaches result in a model that is computationally efficient and captures much of the short timescale dynamic effects represented in fully three-dimensional models. This is demonstrated by comparison with experimental data and by comparing two and three-dimensional model behavior in the frequency domain. Predicted monthly outlet temperatures and heat transfer rates are furthermore shown to be in close agreement with experimental values and in good agreement with existing borehole heat exchanger models. The model is computationally efficient enough to allow use in routine analysis and design tasks.},
+  doi      = {https://doi.org/10.1016/j.renene.2015.05.004},
+  keywords = {Borehole heat exchanger, Geothermal, Ground source heat pump, Numerical model},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0960148115003651},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
