--- a/References.bib
+++ b/References.bib
@@ -266,7 +266,7 @@
   number    = {Report N-1528},
   address   = {Port Hueneme, CA},
   pages     = {26},
-  publisher = {Civil Engineering Laboratory},
+  institution = {Civil Engineering Laboratory},
 }
 
 @Article{CIMMINO2014641,
@@ -309,8 +309,7 @@
   number    = {LSC Project Description},
   address   = {Ithaca NY},
   pages     = {10},
-  publisher = {Cornell University},
-  school    = {Cornell University},
+  institution = {Cornell University},
 }
 
 @Misc{Cusack2012,
@@ -360,8 +359,7 @@
   year      = {2005},
   number    = {Report 12/2005},
   address   = {Oslo, Norway},
-  publisher = {Norges Vassdrags - og Energidirektorat},
-  school    = {Norwegian Water Resources and Energy Directorate},
+  institution    = {Norwegian Water Resources and Energy Directorate},
 }
 
 @Article{Eliadis2003,
@@ -386,7 +384,7 @@
   author    = {Elmahdy, A. H. and Mitalas, G. P.},
   title     = {Facility for Testing Cooling and Dehumidifying Coils: Description, Procedures, and Test Results},
   year      = {1978},
-  publisher = {National Research Council of Canada; Division of Building Research},
+  institution = {National Research Council of Canada; Division of Building Research},
 }
 
 @Article{Elmahdy1977,
@@ -536,7 +534,7 @@
   author       = {St{\'e}phane Gonthier},
   title        = {{GeoPerformX} Thermally Enhanced Pipe for Geothermal Applications},
   year         = {2012},
-  organization = {VersaProfiles},
+  institution = {VersaProfiles},
   url          = {http://www.igshpa.okstate.edu/membership/members\_only/proceedings/2012/10-4-2012-1030-Session-A-VERSAPROFILES\%20copy.pdf},
 }
 
@@ -674,7 +672,7 @@
   year      = {1979},
   number    = {ORO 4875-1},
   address   = {Washington D.C.},
-  publisher = {Energy Research and Development Administration},
+  institution = {Energy Research and Development Administration},
 }
 
 @TechReport{Hirshman1975,
@@ -683,7 +681,7 @@
   year      = {1975},
   number    = {T/M727117-1},
   address   = {Washington, D.C.},
-  publisher = {Energy Research and Development Administration},
+  institution = {Energy Research and Development Administration},
 }
 
 @Book{Holman1984,
@@ -1320,8 +1318,7 @@
   year      = {2011},
   number    = {9/2011},
   address   = {Oslo, Norway},
-  publisher = {Norges vassdrags- og energidirektorat},
-  school    = {Norwegian Water Resources and Energy Directorate},
+  institution    = {Norwegian Water Resources and Energy Directorate},
 }
 
 @Article{Song2007,
@@ -1424,8 +1421,7 @@
   year      = {2008},
   number    = {2008: 8DHC-08-04},
   address   = {Paris, France},
-  publisher = {International Energy Agency},
-  school    = {International Energy Agency},
+  institution = {International Energy Agency},
 }
 
 @InProceedings{Tsou1994,
@@ -1564,8 +1560,8 @@
   year     = {1998},
   number   = {TR-WO3024-21},
   address  = {3412 Hillview Ave. Palo Alto, CA 94304},
+  institution = {Electric Power Research Institute},
   abstract = {The Slinky heat exchanger research project was designed to experimentally determine Slinky performance characteristics for use in heat exchanger design. There were three phases to the project. The first tested relative performance of Slinky heat exchangers in spoils backfill with four different pipe arrangements, all with equivalent coil diameters and total feet of pipe, placed in trenches of various lengths. A second series tested the performance of Slinky heat exchangers with a flowable backfill material. Two groups of Slinkys were tested during this phase. One group was installed with flowable fill in four trenches, including a 40-foot trench (500 feet of pipe), 80-foot trench (1000 feet of pipe), 99-foot trench (500 feet of pipe) and 100-foot trench (750 feet of pipe). The second configuration maintained the 99-foot flowable backfill trench, and with it a 40-foot and 99-foot trench from the first test series, along with a 250-foot U-bend in a 6 foot deep horizontal bore. A third series of tests was done using a controlled bench test apparatus on a 40 foot long Slinky with 500 feet of pipe. This report discusses the data and presents a method for incorporating this information into Slinky heat exchanger designs.},
-  school   = {Electric Power Research Institute},
 }
 
 @Article{Fujii2012,
@@ -1613,7 +1609,7 @@
   year    = {2011},
   number  = {2012-06-20},
   address = {Gothenburg, Sweden},
-  school  = {Chalmers Technical University},
+  institution  = {Chalmers Technical University},
 }
 
 @Article{ClaessonHelstrom2011,
@@ -1742,11 +1738,11 @@
 }
 
 @TechReport{ClaessonDunand1983,
-  author  = {Johan Claesson and A. Dunand},
-  title   = {Heat Extraction from the Ground by Horizontal Pipes -- a Mathematical Analysis},
-  year    = {1983},
-  address = {Stockholm, Sweden.},
-  school  = {Swedish Council for Building Research},
+  author      = {Johan Claesson and A. Dunand},
+  title       = {Heat Extraction from the Ground by Horizontal Pipes -- a Mathematical Analysis},
+  institution = {Swedish Council for Building Research},
+  year        = {1983},
+  address     = {Stockholm, Sweden.},
 }
 
 @InBook{SpitlerBernier2016,
@@ -1793,7 +1789,7 @@
   title   = {Multipole Method to Compute the Conductive Heat Flow to and between Pipes in a Composite Cylinder},
   year    = {1987},
   address = {Lund, Sweden},
-  school  = {University of Lund, Department of Building and Mathematical Physics},
+  institution  = {University of Lund, Department of Building and Mathematical Physics},
 }
 
 @Article{MARCOTTE2009392,
@@ -2409,21 +2405,21 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @TechReport{Deru2011,
-  author  = {Deru, M. and Field, K. and Studer, D. and Benne, K. and Griffith, B. and Torcellini, P. and Liu, B. and Halverson, M. and Winiarski, D. and Rosenberg, M. and Yazdanian, M. and Huang, J. and Crawley, D.},
-  title   = {{U.S. Department of Energy} Commercial Reference Building Models of the National Building Stock},
-  year    = {2011},
-  number  = {TP-5500-46861},
-  address = {Golden, CO.},
-  school  = {NREL},
+  author      = {Deru, M. and Field, K. and Studer, D. and Benne, K. and Griffith, B. and Torcellini, P. and Liu, B. and Halverson, M. and Winiarski, D. and Rosenberg, M. and Yazdanian, M. and Huang, J. and Crawley, D.},
+  title       = {{U.S. Department of Energy} Commercial Reference Building Models of the National Building Stock},
+  institution = {National Renewable Energy Laboratory},
+  year        = {2011},
+  number      = {TP-5500-46861},
+  address     = {Golden, CO.},
 }
 
 @TechReport{HammockSullens2017,
-  author  = {Charles W. Hammock and Stephen Sullens},
-  title   = {Coupling Geothermal Heat Pumps with Underground Seasonal Thermal Energy Storage},
-  year    = {2017},
-  number  = {EW-201135},
-  address = {Alexandria, VA},
-  school  = {Environmental Security Technology Certification Program},
+  author      = {Charles W. Hammock and Stephen Sullens},
+  title       = {Coupling Geothermal Heat Pumps with Underground Seasonal Thermal Energy Storage},
+  institution = {Environmental Security Technology Certification Program},
+  year        = {2017},
+  number      = {EW-201135},
+  address     = {Alexandria, VA},
 }
 
 @PhdThesis{Holmberg2016,
@@ -2547,18 +2543,17 @@ In 1996, a US federal agency began developing a new building energy simulation t
 
 @Article{Cimmino2018,
   author    = {Massimo Cimmino},
-  title     = {Fast Calculation of the {g-functions} of Geothermal Borehole Fields Using Similarities in the Evaluation of the Finite Line Source Solution},
+  title     = {Fast calculation of the g-functions of geothermal borehole fields using similarities in the evaluation of the finite line source solution},
   journal   = {Journal of Building Performance Simulation},
   year      = {2018},
-  volume    = {Online},
-  pages     = {1--14},
+  volume    = {11},
+  number    = {6},
+  pages     = {655--668},
   abstract  = {Numerical methods are proposed for the efficient evaluation of the g-functions of geothermal bore fields using the finite line source solution. The presented methods reduce the calculation time for the calculation of g-functions by reducing the number of numerical evaluations of the analytical finite line source solution. A similarity identification method is presented to identify pairs of boreholes for which the finite line source solution takes the same value. A load history reconstruction method is presented to evaluate the g-function at non-uniform time-steps. Using the proposed numerical methods, the calculation time for the g-function of a rectangular field of 12 × 12 boreholes is reduced by a factor 308. The numerical methods allow the evaluation of g-functions of bore fields with large amounts of boreholes in irregular configurations. The g-function of a field of 512 randomly positioned boreholes is calculated in 27 minutes. },
   doi       = {10.1080/19401493.2017.1423390},
   eprint    = {https://doi.org/10.1080/19401493.2017.1423390},
   publisher = {Taylor \& Francis},
-  url       = {
-        https://doi.org/10.1080/19401493.2017.1423390
-
+  url       = {https://doi.org/10.1080/19401493.2017.1423390
 },
 }
 
@@ -2811,8 +2806,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   author = {Im, Piljae and Liu, Xiaobing},
   title  = {Case Study for {ARRA}-funded Ground-source Heat Pump ({GSHP}) Demonstration at {Oakland University}},
   year   = {2014},
-  type   = {Report},
-  school = {ORNL},
+  institution = {Oak Ridge National Laboratory},
 }
 
 @Article{RN14,
@@ -2877,7 +2871,8 @@ In 1996, a US federal agency began developing a new building energy simulation t
   author = {Kissock, J. Kelly and Habrel, Jeff S. and Claridge, David E.},
   title  = {Development of a Toolkit for Calculating Linear, Change-point Linear and Multiple-linear Inverse Building Analysis Energy Models},
   year   = {2002},
-  type   = {Report},
+  number = {Final Report 1050-RP},
+  institution = {ASHRAE},
 }
 
 @InProceedings{RN20,
@@ -2982,7 +2977,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   year   = {2012},
   type   = {Report},
   number = {IEE/08/776/SI2.529222},
-  school = {Intelligent Energy Europe},
+  institution = {Intelligent Energy Europe},
 }
 
 @Article{RN31,
@@ -3164,7 +3159,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   title     = {In {French}---connexion Des B{\^a}timents De L'onu Au R{\'e}seau Gln Analyse De La Premi{\`e}re Ann{\'e}e De Fonctionnement},
   year      = {2012},
   address   = {Geneva, Switzerland},
-  publisher = {Universit{\'e} de Gen{\'e}ve},
+  institution = {Universit{\'e} de Gen{\'e}ve},
 }
 
 @InProceedings{SpitlerSouthardLiu2017,
@@ -3335,7 +3330,6 @@ In 1996, a US federal agency began developing a new building energy simulation t
   title       = {Method to obtain g-functions for multiple precast quadratic pile heat exchangers},
   institution = {Aalborg University},
   year        = {2018},
-  type        = {techreport},
   number      = {243},
   url         = {http://vbn.aau.dk/files/274763046/Method_to_obtain_g_functions_for_multiple_precast_quadratic_pile_heat_exchangers.pdf},
 }
