--- a/References.bib
+++ b/References.bib
@@ -260,13 +260,13 @@
 }
 
 @TechReport{Ciani1978,
-  author    = {Ciani, John},
-  title     = {Sea/lake Water Cooling for Naval Facilities},
-  year      = {1978},
-  number    = {Report N-1528},
-  address   = {Port Hueneme, CA},
-  pages     = {26},
+  author      = {Ciani, John},
+  title       = {Sea/lake Water Cooling for Naval Facilities},
   institution = {Civil Engineering Laboratory},
+  year        = {1978},
+  number      = {Report N-1528},
+  address     = {Port Hueneme, CA},
+  pages       = {26},
 }
 
 @Article{CIMMINO2014641,
@@ -303,13 +303,13 @@
 }
 
 @TechReport{Cornell2001,
-  author    = {Cornell},
-  title     = {Lake Source Cooling},
-  year      = {2001},
-  number    = {LSC Project Description},
-  address   = {Ithaca NY},
-  pages     = {10},
+  author      = {Cornell},
+  title       = {Lake Source Cooling},
   institution = {Cornell University},
+  year        = {2001},
+  number      = {LSC Project Description},
+  address     = {Ithaca NY},
+  pages       = {10},
 }
 
 @Misc{Cusack2012,
@@ -354,12 +354,12 @@
 }
 
 @TechReport{Eggen2005,
-  author    = {Eggen, G. and Slettahjell, O.},
-  title     = {{In Norwegian---Varmepumpens} Bidrag Til Redusert Energibruk I {Norge}},
-  year      = {2005},
-  number    = {Report 12/2005},
-  address   = {Oslo, Norway},
-  institution    = {Norwegian Water Resources and Energy Directorate},
+  author      = {Eggen, G. and Slettahjell, O.},
+  title       = {{In Norwegian---Varmepumpens} Bidrag Til Redusert Energibruk I {Norge}},
+  institution = {Norwegian Water Resources and Energy Directorate},
+  year        = {2005},
+  number      = {Report 12/2005},
+  address     = {Oslo, Norway},
 }
 
 @Article{Eliadis2003,
@@ -381,10 +381,10 @@
 }
 
 @TechReport{Elmahdy1978,
-  author    = {Elmahdy, A. H. and Mitalas, G. P.},
-  title     = {Facility for Testing Cooling and Dehumidifying Coils: Description, Procedures, and Test Results},
-  year      = {1978},
+  author      = {Elmahdy, A. H. and Mitalas, G. P.},
+  title       = {Facility for Testing Cooling and Dehumidifying Coils: Description, Procedures, and Test Results},
   institution = {National Research Council of Canada; Division of Building Research},
+  year        = {1978},
 }
 
 @Article{Elmahdy1977,
@@ -531,11 +531,11 @@
 }
 
 @TechReport{Gonthier2012,
-  author       = {St{\'e}phane Gonthier},
-  title        = {{GeoPerformX} Thermally Enhanced Pipe for Geothermal Applications},
-  year         = {2012},
+  author      = {St{\'e}phane Gonthier},
+  title       = {{GeoPerformX} Thermally Enhanced Pipe for Geothermal Applications},
   institution = {VersaProfiles},
-  url          = {http://www.igshpa.okstate.edu/membership/members\_only/proceedings/2012/10-4-2012-1030-Session-A-VERSAPROFILES\%20copy.pdf},
+  year        = {2012},
+  url         = {http://www.igshpa.okstate.edu/membership/members\_only/proceedings/2012/10-4-2012-1030-Session-A-VERSAPROFILES\%20copy.pdf},
 }
 
 @Electronic{Google2011,
@@ -667,21 +667,21 @@
 }
 
 @TechReport{Hirshman1979,
-  author    = {Hirshman, Jules and Kirklin, Richard H.},
-  title     = {Feasibility of a District Cooling Systems Using Natural Cold Waters. Final Report},
-  year      = {1979},
-  number    = {ORO 4875-1},
-  address   = {Washington D.C.},
+  author      = {Hirshman, Jules and Kirklin, Richard H.},
+  title       = {Feasibility of a District Cooling Systems Using Natural Cold Waters. Final Report},
   institution = {Energy Research and Development Administration},
+  year        = {1979},
+  number      = {ORO 4875-1},
+  address     = {Washington D.C.},
 }
 
 @TechReport{Hirshman1975,
-  author    = {Hirshman, Jules and Whithaus, Douglas A. and Brooks, Irving H.},
-  title     = {Feasibility of a District Cooling System Utilizing Cold Seawater. Phase 1: Final Report},
-  year      = {1975},
-  number    = {T/M727117-1},
-  address   = {Washington, D.C.},
+  author      = {Hirshman, Jules and Whithaus, Douglas A. and Brooks, Irving H.},
+  title       = {Feasibility of a District Cooling System Utilizing Cold Seawater. Phase 1: Final Report},
   institution = {Energy Research and Development Administration},
+  year        = {1975},
+  number      = {T/M727117-1},
+  address     = {Washington, D.C.},
 }
 
 @Book{Holman1984,
@@ -690,7 +690,7 @@
   year      = {1984},
   author    = {Holman, J. P. and Gajda Jr, W. J.},
   address   = {New York, NY},
-  edition   = {4\textsuperscript{th}}
+  edition   = {4\textsuperscript{th}},
 }
 
 @Article{Hondzo1993,
@@ -825,7 +825,7 @@
   year      = {2005},
   author    = {Kays, William and Crawford, Michael and Weigand, Bernhard},
   address   = {New York, NY},
-  edition   = {4\textsuperscript{th}}
+  edition   = {4\textsuperscript{th}},
 }
 
 @InProceedings{Keens1977,
@@ -1313,12 +1313,12 @@
 }
 
 @TechReport{Smebye2011,
-  author    = {Smebye, Helge and Midttomme, Kirsti and Stene, Jorn},
-  title     = {{In Norwegian -- Energi} Fra Overflatevann I {Norge} -- Kartlegging Av {\o}konomisk Potensial},
-  year      = {2011},
-  number    = {9/2011},
-  address   = {Oslo, Norway},
-  institution    = {Norwegian Water Resources and Energy Directorate},
+  author      = {Smebye, Helge and Midttomme, Kirsti and Stene, Jorn},
+  title       = {{In Norwegian -- Energi} Fra Overflatevann I {Norge} -- Kartlegging Av {\o}konomisk Potensial},
+  institution = {Norwegian Water Resources and Energy Directorate},
+  year        = {2011},
+  number      = {9/2011},
+  address     = {Oslo, Norway},
 }
 
 @Article{Song2007,
@@ -1416,12 +1416,12 @@
 }
 
 @TechReport{Thornton2008,
-  author    = {Thornton, Robert and Miller, Robert and Robinson, Anis and Gillespie, Ken},
-  title     = {Assessing the Actual Energy Efficiency of Building Scale Cooling Systems},
-  year      = {2008},
-  number    = {2008: 8DHC-08-04},
-  address   = {Paris, France},
+  author      = {Thornton, Robert and Miller, Robert and Robinson, Anis and Gillespie, Ken},
+  title       = {Assessing the Actual Energy Efficiency of Building Scale Cooling Systems},
   institution = {International Energy Agency},
+  year        = {2008},
+  number      = {2008: 8DHC-08-04},
+  address     = {Paris, France},
 }
 
 @InProceedings{Tsou1994,
@@ -1555,13 +1555,13 @@
 }
 
 @TechReport{Smith1998,
-  author   = {Smith, Marvin D.},
-  title    = {Circular Pipe Ground Heat Exchangers -- Slinky Heat Exchanger Performance and Modeling},
-  year     = {1998},
-  number   = {TR-WO3024-21},
-  address  = {3412 Hillview Ave. Palo Alto, CA 94304},
+  author      = {Smith, Marvin D.},
+  title       = {Circular Pipe Ground Heat Exchangers -- Slinky Heat Exchanger Performance and Modeling},
   institution = {Electric Power Research Institute},
-  abstract = {The Slinky heat exchanger research project was designed to experimentally determine Slinky performance characteristics for use in heat exchanger design. There were three phases to the project. The first tested relative performance of Slinky heat exchangers in spoils backfill with four different pipe arrangements, all with equivalent coil diameters and total feet of pipe, placed in trenches of various lengths. A second series tested the performance of Slinky heat exchangers with a flowable backfill material. Two groups of Slinkys were tested during this phase. One group was installed with flowable fill in four trenches, including a 40-foot trench (500 feet of pipe), 80-foot trench (1000 feet of pipe), 99-foot trench (500 feet of pipe) and 100-foot trench (750 feet of pipe). The second configuration maintained the 99-foot flowable backfill trench, and with it a 40-foot and 99-foot trench from the first test series, along with a 250-foot U-bend in a 6 foot deep horizontal bore. A third series of tests was done using a controlled bench test apparatus on a 40 foot long Slinky with 500 feet of pipe. This report discusses the data and presents a method for incorporating this information into Slinky heat exchanger designs.},
+  year        = {1998},
+  number      = {TR-WO3024-21},
+  address     = {3412 Hillview Ave. Palo Alto, CA 94304},
+  abstract    = {The Slinky heat exchanger research project was designed to experimentally determine Slinky performance characteristics for use in heat exchanger design. There were three phases to the project. The first tested relative performance of Slinky heat exchangers in spoils backfill with four different pipe arrangements, all with equivalent coil diameters and total feet of pipe, placed in trenches of various lengths. A second series tested the performance of Slinky heat exchangers with a flowable backfill material. Two groups of Slinkys were tested during this phase. One group was installed with flowable fill in four trenches, including a 40-foot trench (500 feet of pipe), 80-foot trench (1000 feet of pipe), 99-foot trench (500 feet of pipe) and 100-foot trench (750 feet of pipe). The second configuration maintained the 99-foot flowable backfill trench, and with it a 40-foot and 99-foot trench from the first test series, along with a 250-foot U-bend in a 6 foot deep horizontal bore. A third series of tests was done using a controlled bench test apparatus on a 40 foot long Slinky with 500 feet of pipe. This report discusses the data and presents a method for incorporating this information into Slinky heat exchanger designs.},
 }
 
 @Article{Fujii2012,
@@ -1587,10 +1587,10 @@
 @Book{1982,
   title     = {Sj{\"o}v{\"a}rmesystem},
   publisher = {Byggforskningsr\r{a}det},
+  year      = {1982},
   number    = {R143:1982},
   series    = {BFR-seminarium maj 1982},
   booktitle = {BFR-seminarium},
-  year      = {1982},
 }
 
 @Article{Javed2011,
@@ -1604,12 +1604,12 @@
 }
 
 @TechReport{Claesson2011,
-  author  = {Johan Claesson},
-  title   = {Multipole Method to Calculate Borehole Thermal Resistances: Mathematical Report},
-  year    = {2011},
-  number  = {2012-06-20},
-  address = {Gothenburg, Sweden},
-  institution  = {Chalmers Technical University},
+  author      = {Johan Claesson},
+  title       = {Multipole Method to Calculate Borehole Thermal Resistances: Mathematical Report},
+  institution = {Chalmers Technical University},
+  year        = {2011},
+  number      = {2012-06-20},
+  address     = {Gothenburg, Sweden},
 }
 
 @Article{ClaessonHelstrom2011,
@@ -1785,11 +1785,11 @@
 }
 
 @TechReport{BennetClaessonHelstrom1987,
-  author  = {J. Bennet and J. Claesson and G. Helstr{\"o}m},
-  title   = {Multipole Method to Compute the Conductive Heat Flow to and between Pipes in a Composite Cylinder},
-  year    = {1987},
-  address = {Lund, Sweden},
-  institution  = {University of Lund, Department of Building and Mathematical Physics},
+  author      = {J. Bennet and J. Claesson and G. Helstr{\"o}m},
+  title       = {Multipole Method to Compute the Conductive Heat Flow to and between Pipes in a Composite Cylinder},
+  institution = {University of Lund, Department of Building and Mathematical Physics},
+  year        = {1987},
+  address     = {Lund, Sweden},
 }
 
 @Article{MARCOTTE2009392,
@@ -2803,10 +2803,10 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @TechReport{RN13,
-  author = {Im, Piljae and Liu, Xiaobing},
-  title  = {Case Study for {ARRA}-funded Ground-source Heat Pump ({GSHP}) Demonstration at {Oakland University}},
-  year   = {2014},
+  author      = {Im, Piljae and Liu, Xiaobing},
+  title       = {Case Study for {ARRA}-funded Ground-source Heat Pump ({GSHP}) Demonstration at {Oakland University}},
   institution = {Oak Ridge National Laboratory},
+  year        = {2014},
 }
 
 @Article{RN14,
@@ -2868,11 +2868,11 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @TechReport{RN19,
-  author = {Kissock, J. Kelly and Habrel, Jeff S. and Claridge, David E.},
-  title  = {Development of a Toolkit for Calculating Linear, Change-point Linear and Multiple-linear Inverse Building Analysis Energy Models},
-  year   = {2002},
-  number = {Final Report 1050-RP},
+  author      = {Kissock, J. Kelly and Habrel, Jeff S. and Claridge, David E.},
+  title       = {Development of a Toolkit for Calculating Linear, Change-point Linear and Multiple-linear Inverse Building Analysis Energy Models},
   institution = {ASHRAE},
+  year        = {2002},
+  number      = {Final Report 1050-RP},
 }
 
 @InProceedings{RN20,
@@ -2972,12 +2972,12 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @TechReport{RN51,
-  author = {Nordman, R. and Kleefkens, O. and Riviere, P. and Nowak, T. and Zottl, A. and Arzano-Daurelle, C. and Lehmann, A. and Polyzou, O. and Karytsas, K. and Riederer, P. and Miara, M. and Lindahl, M. and Andersson, K. and Olsson, M.},
-  title  = {Seasonal Performance Factor and Monitoring for Heat Pump Systems in the Building Sector. {SEPEMO-Build} Final Report},
-  year   = {2012},
-  type   = {Report},
-  number = {IEE/08/776/SI2.529222},
+  author      = {Nordman, R. and Kleefkens, O. and Riviere, P. and Nowak, T. and Zottl, A. and Arzano-Daurelle, C. and Lehmann, A. and Polyzou, O. and Karytsas, K. and Riederer, P. and Miara, M. and Lindahl, M. and Andersson, K. and Olsson, M.},
+  title       = {Seasonal Performance Factor and Monitoring for Heat Pump Systems in the Building Sector. {SEPEMO-Build} Final Report},
   institution = {Intelligent Energy Europe},
+  year        = {2012},
+  type        = {Report},
+  number      = {IEE/08/776/SI2.529222},
 }
 
 @Article{RN31,
@@ -3155,11 +3155,11 @@ In 1996, a US federal agency began developing a new building energy simulation t
 }
 
 @TechReport{Viquerat2012a,
-  author    = {Viquerat, Pierre-Alain and Lachal, Bernard and Hollmuller, Pierre},
-  title     = {In {French}---connexion Des B{\^a}timents De L'onu Au R{\'e}seau Gln Analyse De La Premi{\`e}re Ann{\'e}e De Fonctionnement},
-  year      = {2012},
-  address   = {Geneva, Switzerland},
+  author      = {Viquerat, Pierre-Alain and Lachal, Bernard and Hollmuller, Pierre},
+  title       = {In {French}---connexion Des B{\^a}timents De L'onu Au R{\'e}seau Gln Analyse De La Premi{\`e}re Ann{\'e}e De Fonctionnement},
   institution = {Universit{\'e} de Gen{\'e}ve},
+  year        = {2012},
+  address     = {Geneva, Switzerland},
 }
 
 @InProceedings{SpitlerSouthardLiu2017,
@@ -3256,12 +3256,12 @@ In 1996, a US federal agency began developing a new building energy simulation t
   url      = {http://www.sciencedirect.com/science/article/pii/S0378778817337544},
 }
 
-@misc{GoogleNgrams,
+@Misc{GoogleNgrams,
   author       = {Google},
   title        = {{Google Books Ngrams Viewer}},
+  howpublished = {\url{http://books.google.com/ngrams}},
   year         = {2018},
   publisher    = {Google},
-  howpublished = {\url{http://books.google.com/ngrams}},
 }
 
 @PhdThesis{Cullin2014,
@@ -3272,12 +3272,12 @@ In 1996, a US federal agency began developing a new building energy simulation t
   address = {Stillwater, OK},
 }
 
-@misc{DOEWeatherData,
+@Misc{DOEWeatherData,
   author       = {DOE},
   title        = {{Weather Data}},
+  howpublished = {\url{https://energyplus.net/weather}},
   year         = {2018},
   publisher    = {U.S. Department of Energy},
-  howpublished = {\url{https://energyplus.net/weather}},
 }
 
 @Article{NSGA2,
@@ -3346,6 +3346,22 @@ In 1996, a US federal agency began developing a new building energy simulation t
   doi      = {https://doi.org/10.1016/j.renene.2015.05.004},
   keywords = {Borehole heat exchanger, Geothermal, Ground source heat pump, Numerical model},
   url      = {http://www.sciencedirect.com/science/article/pii/S0960148115003651},
+}
+
+@PhdThesis{Wentzel2005,
+  author   = {Eva-Lotta Wentzel},
+  title    = {Thermal modeling of walls foundations and whole buildings using dynamic thermal networks},
+  school   = {Chalmers University of Technology},
+  year     = {2005},
+  type     = {phdthesis},
+  address  = {G{\"o}teborg, Sweden},
+  abstract = {The modeling of the energy balance of buildings is a major task in building physics. In a new theory called dynamic thermal networks, developed at the Building Physics Research Group at Chalmers, the calculations are based on step- response functions, and the problems are illustrated in so-called dynamic networks. Long time scales for heat flux through building foundations and the surrounding ground are handled by a special reduction procedure.
+
+The aim of this thesis is to apply the theory to increase knowledge of the factors that influence a dynamic heat loss calculation. The theory is used to illustrate the thermal behavior of different wall types, different foundations and whole buildings in three dimensions. The thermal behavior of a crawl space and an attic is studied, where the influence of long-wave radiation between internal surfaces is accounted for. A few applications of the theory on energy balances for problems having two or three boundary temperatures are presented, and an example of an application in a moisture problem is shown.
+
+The step-response functions for one-dimensional cases are calculated analytically by using a combination of Fourier and Laplace techniques. The response functions for two- and three-dimensional cases are calculated numerically. Analytical expressions are fitted to the numerical values for short and long time to give better precision and faster calculation time.
+
+The work reported in the thesis shows that it is fairly simple to apply the theory to heat balances. A building’s heat balance can be calculated in a few minutes only for a time step of one hour during a year with an ordinary desktop computer. The full accuracy of the calculations for the three-dimensional step-response heat flow process in the building’s envelope is essentially retained in the modeling during the annual cycle. The investigations of the thermal behavior of buildings and different building components show that a great deal of information can be gained from the response functions.},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
