Adding years to conferences.

--- a/References.bib
+++ b/References.bib
@@ -2609,9 +2609,6 @@ In 1996, a US federal agency began developing a new building energy simulation t
   pages   = {12--23},
 }
 
-@Article{,
-}
-
 @Article{SouthardLiuSpitler2014a,
   author  = {Laura E. Southard and Xiaobing Liu and Jeffrey D. Spitler},
   title   = {Performance of {HVAC} Systems at {ASHRAE HQ} -- {Part 1}},
@@ -2771,10 +2768,11 @@ In 1996, a US federal agency began developing a new building energy simulation t
   url     = {http://www.sciencedirect.com/science/article/pii/S0378778813004556},
 }
 
-@InProceedings{RN10,
+@InProceedings{Henderson2000,
   author    = {Henderson, Hugh I. Jr. and Khattar, Mukesh K. and Carlson, Steven W. P. E. and Walburger, Adam C.},
   title     = {The Implications of the Measured Performance of Variable Flow Pumping Systems in Geothermal and Water Loop Heat Pump Applications},
   booktitle = {ASHRAE Transactions},
+  year      = {2000},
   volume    = {106},
   publisher = {ASHRAE},
   type      = {Conference Proceedings},
@@ -2793,10 +2791,11 @@ In 1996, a US federal agency began developing a new building energy simulation t
   url     = {http://www.sciencedirect.com/science/article/pii/S096014810800236X},
 }
 
-@InProceedings{RN12,
+@InProceedings{Iglesias2012,
   author    = {Iglesias, M. and Rodriguez, J. and Franco, D.},
   title     = {Monitoring of Building Heating and Cooling Systems Based on Geothermal Heat Pump in {Galacia (Spain)}},
   booktitle = {Proceedings of EPJ Web of Conferences},
+  year      = {2012},
   volume    = {33},
   pages     = {1--7},
   type      = {Conference Proceedings},
@@ -2875,18 +2874,13 @@ In 1996, a US federal agency began developing a new building energy simulation t
   number      = {Final Report 1050-RP},
 }
 
-@InProceedings{RN20,
+@InProceedings{Liu2014,
   author    = {Liu, Xiaobing and Beier, Richard A. and Anderson, Michael and Ewbank, Garen N. and Munk, Jeff},
   title     = {Field Test and Evaluation of Residential Ground Source Heat Pump Systems Using Alternative Vertical-bore Ground Heat Exchangers},
   booktitle = {11\textsuperscript{th} IEA Heat Pump Conference},
+  year      = {2014},
+  note      = {May 12--14},
   type      = {Conference Proceedings},
-}
-
-@Misc{RN49,
-  month  = aug,
-  year   = {2014},
-  number = {B4},
-  type   = {Newspaper Article},
 }
 
 @Article{RN21,
@@ -2932,10 +2926,11 @@ In 1996, a US federal agency began developing a new building energy simulation t
   type    = {Journal Article},
 }
 
-@InProceedings{RN25,
+@InProceedings{Mendrinos2016,
   author    = {Mendrinos, Dimitrios and Karytsas, Constantine},
   title     = {Monitoring Results After 12 Months of Provision of Heating and Cooling at the 8 Demonstration Buildings of the {European project "Ground-Med}"},
   booktitle = {European Geothermal Congress},
+  year      = {2016},
   pages     = {1--6},
   type      = {Conference Proceedings},
 }
@@ -2952,10 +2947,12 @@ In 1996, a US federal agency began developing a new building energy simulation t
   url     = {http://www.sciencedirect.com/science/article/pii/S0378778806001964},
 }
 
-@InProceedings{RN27,
+@InProceedings{Minea2013,
   author    = {Minea, Vasile},
   title     = {Multi-year Validation of a Residential Ground-source Heat Pump System with Vertical Closed-loop Heat Exchanger},
   booktitle = {11\textsuperscript{th} REHVA World Congress \& 8\textsuperscript{th} International Conference on IAQVEC, CLIMA 2013, Energy Efficient, Smart and Healthy Buildings},
+  year      = {2013},
+  note      = {June 16-19},
   type      = {Conference Proceedings},
 }
 
@@ -3011,10 +3008,12 @@ In 1996, a US federal agency began developing a new building energy simulation t
   url     = {http://www.sciencedirect.com/science/article/pii/S0375650516300839},
 }
 
-@InProceedings{RN34,
+@InProceedings{Sakata2013,
   author    = {Sakata, Takeru and Saito, Masaya and Kikuta, Koki and Omi, Yoshiki},
   title     = {A Field Measurement of the Utilizing Geothermal and External Insulated House in Winter Season with Energy and Exergy Analysis},
   booktitle = {{11\textsuperscript{th} REHVA World Congress \& 8\textsuperscript{th} International Conference on IAQVEC, CLIMA 2013, Energy Efficient, Smart and Healthy Buildings}},
+  year      = {2013},
+  note      = {June 16-19},
   type      = {Conference Proceedings},
 }
 
@@ -3123,10 +3122,11 @@ In 1996, a US federal agency began developing a new building energy simulation t
   url     = {https://doi.org/10.1080/23744731.2016.1239467},
 }
 
-@InProceedings{RN44,
+@InProceedings{Winger2013,
   author    = {Winger, Simon and Kalz, Doreen and Sonntag, Martin and Vellei, Marika},
   title     = {Energy and Efficiency Analysis of Heat Pump Systems in Nonresidential Buildings by means of Long-term Measurements},
   booktitle = {11\textsuperscript{th} REHVA World Congress \& 8\textsuperscript{th} International Conference on IAQVEC, CLIMA 2013, Energy Efficient, Smart and Healthy Buildings},
+  year      = {2013},
   type      = {Conference Proceedings},
 }
 
