--- a/References.bib
+++ b/References.bib
@@ -3364,4 +3364,47 @@ The step-response functions for one-dimensional cases are calculated analyticall
 The work reported in the thesis shows that it is fairly simple to apply the theory to heat balances. A building’s heat balance can be calculated in a few minutes only for a time step of one hour during a year with an ordinary desktop computer. The full accuracy of the calculations for the three-dimensional step-response heat flow process in the building’s envelope is essentially retained in the modeling during the annual cycle. The investigations of the thermal behavior of buildings and different building components show that a great deal of information can be gained from the response functions.},
 }
 
+@Article{Li2012,
+  author   = {Min Li and Alvin C.K. Lai},
+  title    = {New temperature response functions (G functions) for pile and borehole ground heat exchangers based on composite-medium line-source theory},
+  journal  = {Energy},
+  year     = {2012},
+  volume   = {38},
+  number   = {1},
+  pages    = {255 - 263},
+  issn     = {0360-5442},
+  abstract = {This paper presents a new approach to modeling of heat transfer by ground heat exchangers, involving unsteady heat conduction in composite media together with complex geometry. Analytical solutions for continuous line and cylindrical-surface sources are developed based on Jaeger’s instantaneous line-source solution for composite media. New temperature response functions (G functions) are also presented for pile ground heat exchangers with spiral coils and for borehole ground heat exchangers with single or double U-shaped tubes. These temperature response functions can be used to analyze the impact of difference between properties of materials inside and outside boreholes or piles on the performance of ground heat exchangers. Theoretical results show that the difference in properties is an important factor affecting the temperature response of ground heat exchangers. Since the heat capacity of grout, inside boreholes, is fully considered by this line-source theory, the new G functions should be particularly suitable for predicting small-time dynamic behaviors of ground heat exchangers. Therefore, these G functions may be significant for energy analysis and in-situ thermal response tests of ground-coupled heat pump systems.},
+  doi      = {https://doi.org/10.1016/j.energy.2011.12.004},
+  keywords = {Ground heat exchanger, Energy pile, Temperature response function, Ground-coupled heat pump system, Composite medium},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0360544211007985},
+}
+
+@Article{LiLiChanLai2014,
+  author   = {Min Li and Ping Li and Vincent Chan and Alvin C.K. Lai},
+  title    = {Full-scale temperature response function (G-function) for heat transfer by borehole ground heat exchangers (GHEs) from sub-hour to decades},
+  journal  = {Applied Energy},
+  year     = {2014},
+  volume   = {136},
+  pages    = {197--205},
+  issn     = {0306-2619},
+  abstract = {Heat transfer by borehole ground heat exchangers involves diverse time–space scales and thus imposes a significant challenge to geothermal engineers. In order to overcome this challenge, this paper develops an analytical full-scale model from the idea of matched asymptotic expansion. The full-scale model is a composite expression consisting of a composite-medium line-source solution (inner solution), a finite line-source solution (outer solution), and an infinite line-source solution. The full-scale model is first verified by a frequency-decomposition method. Furthermore, the full-scale model is reformulated as a multi-stage model based on Duhamel’s theorem to reduce the computational cost. The multi-stage model combines the three separate solutions in a sequential way, i.e., the inner solution for the short-time scale, the conventional infinite line-source solution for the intermediate time scale, and the outer solution for the long-time scale. Finally, we perform a parametric study on a ground heat exchanger with single U-shaped tube, by which the spacing between U-tube legs, the length-to-radius ratio of borehole, the ratios of thermal diffusivities and conductivities of the ground and backfilling material are analyzed.},
+  doi      = {https://doi.org/10.1016/j.apenergy.2014.09.013},
+  keywords = {Borehole ground heat exchanger, Temperature response function, Full-scale model, Composite-medium line-source model},
+  url      = {http://www.sciencedirect.com/science/article/pii/S030626191400960X},
+}
+
+@Article{PASQUIER2018910,
+  author   = {Philippe Pasquier and Angelo Zarrella and Richard Labib},
+  title    = {Application of artificial neural networks to near-instant construction of short-term g-functions},
+  journal  = {Applied Thermal Engineering},
+  year     = {2018},
+  volume   = {143},
+  pages    = {910--921},
+  issn     = {1359-4311},
+  abstract = {The concept of a g-function is frequently used to simplify the simulation of a ground heat exchanger composed of several boreholes. The technique is suitable for modelling long-term thermal interactions, although it suffers from a lack of accuracy in the short term. Alternatively, models based on the theory of thermal resistances and capacities provide a more accurate solution for the short term but at the cost of a long solution time that prevents an efficient iterative use. In this work, an artificial neural network designed to rapidly and accurately construct the short-term g-function of a ground heat exchanger is presented. To assemble a large training set, 15 000 simulations are performed with an accurate thermal resistance and capacity model. The boundary conditions used to solve the model allow direct construction of the short-term g-function for the outlet fluid temperature. A multilayer perceptron architecture is proposed in conjunction with a methodology designed to reduce training time and increase the accuracy of the neural network. The output of the resulting network is compared with numerical and experimental data sets. The construction of a short-term g-function by an artificial neural network is 10 000 times faster and achieved in a few milliseconds. A source code combining efficiently a short- and long-term g-function is published with the paper.},
+  doi      = {https://doi.org/10.1016/j.applthermaleng.2018.07.137},
+  keywords = {Ground-coupled heat pump system, Short-term g-function, Thermal resistance and capacity model, Ground heat exchanger simulation, Artificial neural network},
+  url      = {http://www.sciencedirect.com/science/article/pii/S1359431118305921},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
